--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pve-docs (8.3.1+port1) bookworm; urgency=medium
+
+  * add pxvirt and port docs.
+
+ -- Lierfang Support Team <itsupport@lierfang.com>  Thu, 27 Feb 2025 15:53:53 +0800
+
 pve-docs (8.3.1) bookworm; urgency=medium
 
   * sdn : add chapter reference for VNet level firewall
